fixed coloring content for sixth canvas items on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -286,7 +286,7 @@ footer p {
 }
 .sixth {
 	display: inline-block;
-	width: 16%;
+	width: 15%;
 	height: 0;
 	padding-bottom: 16%;
 }
